--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,14 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.5.3
   intl: ^0.17.0
-  # flutterfire_ui:
+  pin_code_fields: ^8.0.1
+  device_info_plus: ^10.0.1
+  image: ^4.5.4
+  flutter_image_compress: ^2.4.0
+  flutter_image_converter: ^0.4.1
+  audioplayers: ^6.5.0
+  video_player: ^2.10.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +100,7 @@ flutter:
     - assets/images/home3.png
     - assets/images/home4.png
     - assets/images/iconfitur.png
+    - assets/images/f3.peoplespeak/
     - assets/images/f3.peoplespeak/mobilmerah.png
     - assets/images/f3.peoplespeak/2.png
     - assets/images/f3.peoplespeak/3.png
@@ -109,16 +117,26 @@ flutter:
     - assets/images/f3.peoplespeak/c_4kata.png
     - assets/images/f3.peoplespeak/c_5kata.png
     - assets/images/f3.peoplespeak/c_6kata.png
+    # - assets/images/f3.peoplespeak/c_6kata2.png
     - assets/images/f3.peoplespeak/board.png
+    - assets/images/f3.peoplespeak/video/mobilmerah2.mp4
+    - assets/images/f3.peoplespeak/video/botoldimeja.mp4
+    - assets/images/f3.peoplespeak/video/bukudirak.mp4
+    - assets/images/f3.peoplespeak/video/anjingmainbola.mp4
+    - assets/images/f3.peoplespeak/video/rusamakan.mp4
     - assets/images/f2.cariobjek/1.png
     - assets/images/f2.cariobjek/2.png
     - assets/images/f2.cariobjek/3.png
     - assets/images/f2.cariobjek/4.png
     - assets/images/f2.cariobjek/5.png
     - assets/images/f2.cariobjek/6.png
+    - assets/images/f2.cariobjek/7.png
+    - assets/images/f2.cariobjek/8.png
+    - assets/images/f2.cariobjek/9.png
     - assets/images/scraping.jpg
     - assets/images/wrong.png
     - assets/images/correct.png
+    - assets/images/ready.png
     - assets/images/google.png
     - assets/images/crying.png
     - assets/images/defaulthistory.png
